--- a/index.ipynb
+++ b/index.ipynb
@@ -2057,7 +2057,7 @@
     }
    ],
    "source": [
-    "area_values = \n",
+    "area_values = ['203','']\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [cities[0]['City'], cities[1]['City'], cities[2]['City'], 'y': [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']], 'text': [text_values]}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [[cities[0]['City'], cities[1]['City'], cities[2]['City']], 'y': [[cities[0]['Population'], cities[1]['Population'], cities[2]['Population']], 'text': [text_values]}"
    ]
