--- a/index.ipynb
+++ b/index.ipynb
@@ -2044,22 +2044,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-11-8cb95a60d172>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-15-1c3d11e54d6c>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-8cb95a60d172>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    bar_trace_first_three_areas = {'type': 'bar', 'x': [cities[0]['City'], cities[1]['City'], cities[2]['City'], 'y': [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']], 'text': [text_values]}\u001b[0m\n\u001b[0m                                                                                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-1c3d11e54d6c>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    bar_trace_first_three_areas = {'type': 'bar', 'x': [cities[0]['City'], cities[1]['City'], cities[2]['City'], 'y': [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']], 'text': [area_values]}\u001b[0m\n\u001b[0m                                                                                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "area_values = ['203','630','230']\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [cities[0]['City'], cities[1]['City'], cities[2]['City'], 'y': [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']], 'text': [area_values]}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': [[cities[0]['City'], cities[1]['City'], cities[2]['City']], 'y': [[cities[0]['Population'], cities[1]['Population'], cities[2]['Population']], 'text': [text_values]}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': [[cities[0]['City'], cities[1]['City'], cities[2]['City']], 'y': [[cities[0]['Population'], cities[1]['Population'], cities[2]['Population']], 'text': [area_values]}"
    ]
   },
   {
