--- a/index.ipynb
+++ b/index.ipynb
@@ -2061,7 +2061,7 @@
     "x_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
     "y_values = [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [cities[0]['City'], cities[1]['City'], cities[2]['City'], 'y': [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']], 'text': [area_values]}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': [x], 'y': [[cities[0]['Population'], cities[1]['Population'], cities[2]['Population']], 'text': [area_values]}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': [x_values], 'y': [[cities[0]['Population'], cities[1]['Population'], cities[2]['Population']], 'text': [area_values]}"
    ]
   },
   {
